# ultrathink

./: .gitignore  .mcp.json.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: client.py
scripts/: setup_env.sh
src/ultrathink/: __init__.py  __main__.py  dto.py  main.py  service.py  session.py  thought.py
src/ultrathink/application/services/: thinking_service.py
src/ultrathink/domain/aggregates/: thinking_session.py
src/ultrathink/dto/: request.py  response.py
src/ultrathink/infrastructure/mcp/: server.py
src/ultrathink/interface/: mcp_server.py
src/ultrathink/models/: assumption.py  session.py  thought.py
src/ultrathink/services/: thinking_service.py
tests/: test_cli.py  test_logging.py  test_main.py  test_server.py  test_thought.py
tests/application/services/: test_thinking_service.py
tests/domain/aggregates/: test_session_logging.py
tests/domain/entities/: test_thought.py
tests/infrastructure/mcp/: test_server.py
tests/interface/: test_mcp_server.py
tests/models/: test_assumption.py  test_session.py  test_thought.py
tests/services/: test_thinking_service.py
